--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1148,13 +1148,43 @@ hr.clear {
   .row.narrow {
     max-width: 100%; }
 
+.content-area {
+  max-width: 550px; }
+
+.widget_recent_comments {
+  display: inline-block;
+  float: left; }
+
+.widget_meta {
+  display: inline-block;
+  float: right; }
+
+.widget-title {
+  margin-bottom: 20px;
+  border-bottom: solid 2px black; }
+
+.recentcomments {
+  border-bottom: solid 1px #bfbfbf; }
+
+.medium-8 {
+  max-width: 600px; }
+
+.section-main {
+  padding-left: 34px; }
+
+.entry-meta, .entry-meta a {
+  color: #bfbfbf; }
+
 .site-header {
   position: relative;
   padding-left: 5px;
   padding-top: 10px; }
 
 .site-branding {
-  display: block; }
+  display: block;
+  padding-top: 10px;
+  padding-left: 28px;
+  padding-bottom: 10px; }
 
 .site-title {
   display: inline-block; }
@@ -1168,7 +1198,7 @@ hr.clear {
 
 .main-navigation {
   width: 100%;
-  border-top: solid 1px black;
+  border-top: solid 1px #bfbfbf;
   position: relative;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -1177,7 +1207,8 @@ hr.clear {
 
 .main-navigation li {
   display: inline-block;
-  margin-left: 5px; }
+  margin-left: 30px;
+  margin-right: 30px; }
 
 .entry-footer {
   padding-left: 2px; }
