--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -6,6 +6,9 @@
 }
 .site-branding {
 	display: block;
+	padding-top:10px;
+	padding-left : 28px;
+	padding-bottom: 10px;
 }
 .site-title {
 	display: inline-block;
@@ -19,7 +22,7 @@
 }
 .main-navigation {
 	width: 100%;
-	border-top: solid 1px black;
+	border-top: solid 1px #bfbfbf;
 	position: relative;
 	margin-top:10px;
 	margin-bottom:10px;
@@ -28,6 +31,7 @@
 }
 .main-navigation li {
 	display: inline-block;
-	margin-left: 5px;
+	margin-left: 30px;
+	margin-right: 30px;
 
 }
