--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1161,7 +1161,8 @@ hr.clear {
 
 .widget-title {
   margin-bottom: 20px;
-  border-bottom: solid 2px black; }
+  border-bottom: solid 2px black;
+  font-size: 18px; }
 
 .recentcomments {
   border-bottom: solid 1px #bfbfbf; }
@@ -1174,6 +1175,11 @@ hr.clear {
 
 .entry-meta, .entry-meta a {
   color: #bfbfbf; }
+
+.post {
+  border-bottom: solid 3px #bfbfbf;
+  margin-bottom: 50px;
+  padding-bottom: 10px; }
 
 .site-header {
   position: relative;
@@ -1208,7 +1214,17 @@ hr.clear {
 .main-navigation li {
   display: inline-block;
   margin-left: 30px;
-  margin-right: 30px; }
+  margin-right: 30px;
+  padding-top: 5px; }
+
+.main-navigation a {
+  color: #828181; }
+
+.main-navigation li:hover {
+  border-top: 3px solid black; }
+
+.main-navigation a:hover {
+  color: black; }
 
 .entry-footer {
   padding-left: 2px; }
