--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -33,5 +33,16 @@
 	display: inline-block;
 	margin-left: 30px;
 	margin-right: 30px;
+	padding-top: 5px;
 
+}
+.main-navigation a {
+	color:#828181
+}
+.main-navigation li:hover {
+	border-top: 3px solid black;
+}
+.main-navigation a:hover {
+
+	color : black;
 }
