--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1206,13 +1206,14 @@ hr.clear {
   width: 100%;
   border-top: solid 1px #bfbfbf;
   position: relative;
-  padding-top: 5px;
+  line-height: 34px;
   margin: 10px 0px 20px 0px;
   text-align: left; }
   .main-navigation .page_item {
-    display: inline;
-    margin: 5px 30px 0px 30px;
-    padding-top: 5px; }
+    display: inline-block;
+    margin: 0px 30px 0px 30px;
+    height: 34px;
+    border-top: 3px solid white; }
   .main-navigation .page_item:hover {
     border-top: 3px solid black; }
   .main-navigation a {
