--- a/assets/sass/layout/_general.scss
+++ b/assets/sass/layout/_general.scss
@@ -4,16 +4,28 @@
 		max-width: 100%;
 	}
 }
+.widget-area {
+	.widget {
+		padding-left: 40px;
+
+	}
+}
 .content-area {
 	max-width: 550px;
 }
 .widget_recent_comments {
   display: inline-block;
-  float: left;
+	padding-bottom: 50px;
+	float:left;
 }
 .widget_meta {
 	display: inline-block;
-	float: right;
+	width:165px;
+	li {
+		padding-bottom:5px;
+		border-bottom: 1px dashed #bfbfbf;
+
+	}
 }
 .widget-title {
 	margin-bottom : 20px;
@@ -40,4 +52,7 @@
 	border-bottom: solid 3px #bfbfbf;
 	margin-bottom: 50px;
 	padding-bottom: 10px;
+}
+.medium-4 {
+
 }
