--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -35,9 +35,11 @@
 		border-top: 3px solid black;
 	}
 	a {
-		color:#828181
+		color:#828181;
+
 	}
 	a:hover {
 		color : black;
+		font-weight:bold;
 	}
 }
