--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1251,6 +1251,30 @@ hr.clear {
   padding-top: 10px;
   margin-left: 34px; }
 
+.comments-area {
+  padding-top: 20px; }
+  .comments-area .comments-title {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  .comments-area .comment-body {
+    padding-bottom: 20px;
+    border-bottom: 3px solid #bfbfbf;
+    padding-top: 20px; }
+
+.comment-metadata a {
+  color: #bfbfbf; }
+
+.comment-respond {
+  padding-top: 20px; }
+
+.form-submit .submit {
+  background-color: #ffffff;
+  border: 1px solid #bfbfbf;
+  border-radius: 5px; }
+
+.form-submit .submit:hover {
+  background-color: #bfbfbf; }
+
 /**
  * The standard section wrapper. Use this with other classes for the base styling.
  */
