--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -25,6 +25,7 @@
 @import "layout/general";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/comments";
 
 
 // Any other module that can be reused multuple times.
