--- a/assets/sass/base/_fonts.scss
+++ b/assets/sass/base/_fonts.scss
@@ -1,1 +1,2 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
