--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -32,6 +32,6 @@ $color-accent: $color-orange;		// Orange
 
 
 // Fonts
-$font-serif: Georgia, "Times New Roman", serif;
+$font-serif: Roboto, "Times New Roman", serif;
 $font-sans: Roboto, "Open Sans", sans-serif;
-$font-heading: Roboto, Helvetica, sans-serif;
+$font-heading: Montserrat, Helvetica, sans-serif;
