--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .site-header {
 	position: relative;
-
+	font-family:$font-heading;
 	padding: 10px 0px 0px 5px;
 	// height: $layout-header-height;
 }
@@ -30,7 +30,6 @@
 		margin: 0px 30px 0px 30px;
 		height:34px;
 		border-top: 4px solid white;
-
 	}
 	.page_item:hover {
 		border-top: 4px solid black;
@@ -42,6 +41,7 @@
 	a:hover {
 		color : black;
 	}
+	font-family:$font-heading;
 }
 .search-form {
 	float:right;
@@ -51,5 +51,6 @@
 	.search-field {
 		border:none;
 		outline:none;
+		font-family:$font-heading;
 	}
 }
