--- a/assets/sass/layout/_general.scss
+++ b/assets/sass/layout/_general.scss
@@ -82,10 +82,11 @@
    background-image: url('../images/comment-bubble.png');
 	 background-size:100% 100%;
 	 text-align:center;
-	 padding-top:3px;
+	 padding-top:4px;
    width: 43px;
    height: 36px;
 	 position:relative;
 	 left:500px;
 	 bottom:50px;
+	 font-family: $font-heading;
 }
