--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -34,6 +34,9 @@
 @import "components/elements";
 @import "components/input";
 @import "components/mobile-menu";
+@import "components/widgets";
+@import "components/entry";
+@import "components/comment-bubble";
 
 
 // If there is anything specific for a page it should be in this folder
