--- a/assets/sass/layout/_general.scss
+++ b/assets/sass/layout/_general.scss
@@ -1,100 +1,20 @@
 .row {
 	max-width: 100%;
 	display:flex;
+	
 	&.narrow {
 		max-width: 100%;
 	}
 }
-.medium-8 {
+
+.content-area {
 	min-width: 580px;
 }
-.content-area {
-	max-width: 550px;
-}
-.widget_recent_comments {
-  display: inline-block;
-	padding-bottom: 50px;
-	float:left;
-}
-.widget_meta {
-	display: inline-block;
-	li {
-		padding-bottom:5px;
-		border-bottom: 1px dashed #bfbfbf;
-		padding-top:5px;
 
-	}
-}
-.widget-title {
-	margin-bottom : 20px;
-	border-bottom: solid 4px black;
-	font-size:18px;
-	padding-bottom:5px;
-}
-.recentcomments {
-	border-bottom: 1px dashed #bfbfbf;
-	margin-bottom: 5px;
-	padding-top:5px;
-}
-.medium-8 {
+.main-content {
 	max-width: 600px;
 }
+
 .section-main {
 	padding-left: 34px;
-}
-.entry-meta {
-	color : #bfbfbf;
-	.posted-on {
-		font-weight:bold;
-	}
-	a {
-		color: #bfbfbf;
-	}
-}
-.post {
-	border-bottom: solid 4px #bfbfbf;
-	margin-bottom: 50px;
-	padding-bottom: 10px;
-}
-.entry-footer {
-	a{
-		color:#bfbfbf;
-	}
-	a:hover {
-		color:#404040;
-	}
-}
-.entry {
-	.entry-header {
-		padding-bottom: 20px;
-	}
-}
-.page-header {
-	padding-bottom : 20px;
-}
-.more-link {
-	font-weight:bold;
-}
-.widget {
-	width:80%;
-}
-.entry-content {
-	font-family:$font-sans;
-}
-.comment-bubble {
-   background-image: url('../images/comment-bubble.png');
-	 background-size:100% 100%;
-	 text-align:center;
-	 padding-top:4px;
-   width: 43px;
-   height: 36px;
-	 left:500px;
-	 font-family: $font-heading;
-	 position: absolute;
-	 margin-left: 50px;
-	 margin-top : -50px;
-}
-.small-2 {
-	max-width:250px;
-	min-width:200px;
 }
