--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1154,7 +1154,7 @@ hr.clear {
     max-width: 100%; }
 
 .content-area {
-  min-width: 580px; }
+  max-width: 700px; }
 
 .main-content {
   max-width: 600px;
@@ -1451,7 +1451,7 @@ div.secondary {
   margin-bottom: 20px;
   border-bottom: solid 4px black;
   font-size: 18px;
-  padding-bottom: 5px; }
+  padding-bottom: 10px; }
 
 .recentcomments {
   border-bottom: 1px dashed #bfbfbf;
@@ -1459,7 +1459,11 @@ div.secondary {
   padding-top: 5px; }
 
 .widget {
-  width: 80%; }
+  width: 100%;
+  min-width: 70%; }
+
+.second-widget {
+  margin-left: 20px; }
 
 .entry-meta {
   color: #bfbfbf; }
