--- a/assets/sass/components/_comments.scss
+++ b/assets/sass/components/_comments.scss
@@ -9,7 +9,6 @@
     padding-bottom:20px;
     border-bottom: 3px solid #bfbfbf;
     padding-top: 20px;
-
   }
 }
 
@@ -19,13 +18,14 @@
 
 .comment-metadata{
 
-  a{
-    color: #bfbfbf;
-  }
+	a{
+		font-weight:bold;
+		color: #bfbfbf;
+	}
 
-  a:hover {
-	  color: black;
-  }
+	a:hover {
+		color: black;
+	}
 }
 
 .comment-respond {
