--- a/assets/sass/components/_widgets.scss
+++ b/assets/sass/components/_widgets.scss
@@ -8,9 +8,9 @@
 	display: inline-block;
 
 	li {
-		padding-bottom: 5px;
+		padding-bottom: 10px;
 		border-bottom: 1px dashed #bfbfbf;
-		padding-top: 5px;
+		padding-top: 10px;
 
 	}
 }
@@ -26,6 +26,9 @@
 	border-bottom: 1px dashed #bfbfbf;
 	margin-bottom: 5px;
 	padding-top: 5px;
+	.comment-author-link {
+		font-weight:bold;
+	}
 }
 
 .widget {
@@ -35,4 +38,7 @@
 
 .second-widget {
 	margin-left: 20px;
+}
+.widgets_wrap {
+	min-width:150px;
 }
