--- a/assets/sass/components/_widgets.scss
+++ b/assets/sass/components/_widgets.scss
@@ -36,9 +36,13 @@
 	min-width:60%;
 }
 
-.second-widget {
-	margin-left: 20px;
+.first-widget {
+	margin-right: 20px;
 }
 .widgets_wrap {
-	min-width:150px;
+	min-width:350px;
+	display:inline-block;
+}
+.first_wrap {
+	float:left;
 }
