--- a/assets/sass/components/_comments.scss
+++ b/assets/sass/components/_comments.scss
@@ -1,13 +1,12 @@
 .comments-area {
 
 	.comments-title {
-		padding-top: 10px;
-		padding-bottom: 10px;
+		padding: 10px 0px 10px 0px;
 	}
 
 	.comment-body{
 		padding-bottom:20px;
-		border-bottom: 3px solid #bfbfbf;
+		border-bottom: 1px solid #d4d4d4;
 		padding-top: 20px;
 	}
 }
@@ -16,12 +15,11 @@
 	padding-left: 10px
 }
 
-.comment-author {
-	padding-bottom:5px;
-}
+
 
 .comment-metadata{
-
+	padding-left: 40px;
+	display:inline-block;
 	a{
 		font-weight:bold;
 		color: #585858;
@@ -33,8 +31,8 @@
 }
 
 .comment-respond {
-  padding-top : 20px;
-  padding-left: 10px;
+
+  padding: 20px 0px 0px 10px;
 }
 
 .form-submit {
@@ -71,6 +69,7 @@
 }
 
 .reply {
+	padding-left: 40px;
 
 	a {
 		font-weight:bold;
@@ -83,7 +82,21 @@
 }
 
 .comment-content {
-	padding-top:10px;
-	padding-bottom:10px;
-	padding-left:10px;
+	padding: 15px 0px 15px 0px;
+	padding-left:40px;
+}
+.vcard {
+	.avatar {
+		margin-bottom:-20px;
+		border-radius:50%;
+	}
+
+	.fn {
+		padding-left: 4px;
+	}
+
+}
+
+.comment-meta {
+	font-size: 15px;
 }
