--- a/assets/sass/components/_widgets.scss
+++ b/assets/sass/components/_widgets.scss
@@ -37,7 +37,8 @@
 }
 
 .first-widget {
-	margin-right: 20px;
+	margin-right: 30px;
+	width:100%;
 }
 .widgets_wrap {
 	min-width:350px;
@@ -45,4 +46,5 @@
 }
 .first_wrap {
 	float:left;
+	margin-right: 15px;
 }
