--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1503,7 +1503,7 @@ div.secondary {
 
 .comments-area .comment-body {
   padding-bottom: 20px;
-  border-bottom: 1px solid #d4d4d4;
+  border-bottom: 1px solid #ececec;
   padding-top: 20px; }
 
 .comment-list {
