--- a/assets/sass/components/_comments.scss
+++ b/assets/sass/components/_comments.scss
@@ -6,7 +6,7 @@
 
 	.comment-body{
 		padding-bottom:20px;
-		border-bottom: 1px solid #d4d4d4;
+		border-bottom: 1px solid #ececec;
 		padding-top: 20px;
 	}
 }
