--- a/assets/sass/layout/_general.scss
+++ b/assets/sass/layout/_general.scss
@@ -11,8 +11,16 @@
 	max-width: 700px;
 	margin-right:35px;
 	min-width:220px
-}
 
+}
+.page-content {
+	min-width:600px;
+	padding-bottom: 30px;
+
+	.entry {
+		padding-left:10px;
+	}
+}
 .main-content {
 	max-width: 600px;
 	margin-right:35px;
